# django-simplecms

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cms/: __init__.py  __main__.py  admin.py  apps.py  cms.py  decorators.py  fields.py  forms.py  middleware.py  mixins.py  models.py  registry.py  urls.py  utils.py  views.py
cms/locale/nl/LC_MESSAGES/: django.mo  django.po
cms/migrations/: 0001_initial.py  0002_initial_homepage.py  0002_title.py  0003_remove_section_polymorphic_ctype.py  0003_subsection.py  0004_initial_homepage.py
cms/static/cms/: admin.scss  admin.scss.css  admin.scss.css.map  cms.scss  cms.scss.css  cms.scss.css.map
cms/templates/: admin.html  base.html
cms/templates/cms/: admin.html  base.html  confirm.html  edit.html  edit_page.html  edit_section.html  editlink.html  form.html  formfield.html  formfield_checkbox.html  new.html  page.html
cms/templates/cms/sections/: base.html  contactsection.html  pages.html  section.html
cms/templates/registration/: login.html
cms/templatetags/: cms.py  eval.py  markdown.py
example/: .isort.cfg  .pre-commit-config.yaml  cms.py  models.py  settings.py  urls.py  views.py  wsgi.py
example/app/: apps.py  cms.py  forms.py  models.py  views.py
example/app/migrations/: 0001_initial.py  0002_sectionimage.py
example/app/static/app/: main1.scss  main1.scss.css  main1.scss.css.map
example/app/templates/: base.html
example/app/templates/app/sections/: button.html  contact.html  image.html  images.html  text.html  video.html
example/locale/nl/LC_MESSAGES/: django.mo  django.po
example/migrations/: 0001_initial.py  0002_initial_homepage.bak
example/project/: settings.py
example/static/: main.scss  main1.scss
example/templates/: base.html  contact.html  images.html  text.html  video.html
examples/app/: admin.py  models.py  views.py
examples/app/migrations/: 0001_initial.py
examples/app/static/app/: main1.scss.css.map
examples/app/templates/: base.html
examples/app/templates/app/sections/: image.html  text.html  video.html
examples/app/templates/cms/sections/: textsection.html
examples/project/: settings.py
numberedmodel/: __init__.py  apps.py  models.py
project/: settings.py  urls.py
simplesass/: middleware.py
