[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-simplecms"
description = "Simple Django-based CMS"
requires-python = ">= 3.12"
dynamic = ["version"]
readme = "README.md"
authors = [{name = "Jaap Joris Vens", email = "jj@rtts.eu"}]
urls.source = "https://github.com/rtts/django-simplecms/"
urls.issues = "https://github.com/rtts/django-simplecms/issues/"
urls.changelog = "https://github.com/rtts/django-simplecms/releases/"
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
dependencies = [
  "django",
  "django-embed-video",
  "django-tidy",  # requires Tidy (apt install tidy)
  "easy-thumbnails",
  "libsass",
  "markdown",
  "psycopg",
  "pylibmc",  # requires Memcached (apt install memcached)
]

[project.scripts]
simplecms = "cms.__main__:main"

[tool.setuptools]
packages = ["cms", "example"]
dynamic.version = {attr = "cms.__version__"}
