[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-simplecms"
description = "Simple Django-based CMS"
requires-python = ">= 3.8"
dynamic = ["version"]
readme = "README.md"
authors = [{name = "Jaap Joris Vens", email = "jj@rtts.eu"}]
urls.Changelog = "https://github.com/rtts/django-simplecms/releases/"
urls.Issues = "https://github.com/rtts/django-simplecms/issues/"
urls.Source = "https://github.com/rtts/django-simplecms/"
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
dependencies = [
  "django",
  "django-embed-video",
  "django-tidy",  # requires Tidy
  "easy-thumbnails",
  "libsass",
  "markdown",
  "psycopg",
  "pylibmc",  # requires Memcached
]

[project.scripts]
simplecms = "cms.__main__:main"

[tool.setuptools]
packages = ["cms", "example"]
dynamic.version = {attr = "cms.__version__"}
